2011-01-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* spcut: only correct results with continuous wave numbers starting at 1 (bug fix)
	
2011-01-15  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remaplib: fix data race in calculation of bin_addr (OpenMP)
	
2011-01-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* detrend: integer overflow; wrong result for nts > 46340 (bug fix) [report: Torsten Seifert]

2011-01-11  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellonlatbox: does not work as expected (bug fix) [report: Jonathan Schubert]
	
2011-01-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator delete - Delete fields
	* sellonlatbox: cellidx was not initialized (bug fix) [report: Jaison Ambadan]
	
2011-01-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remaplib: Changed remap weights from 2D to 1D array
	
2011-01-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.6
	* Version 1.4.6 released

2011-01-05  Frank Kaspar <Frank.Kaspar@dwd.de>

	* import_cmsaf: set max length of date string to 8 (bug fix)

2011-01-05  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* import_cmsaf: added time information also for time constant fields [request: Frank Kaspar]

2010-12-17  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eofcoeff: set size of eof_name to 6 (bug fix)

2010-12-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* import_binary: check for gauss grids only when flag linear=0
	
2010-12-14  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* readline: filter carriage return '\r' [report: Christian Steger]

2010-12-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* setclonlatbox: bug fix for 1x1 grids [report: Angelika Heil]
	
2010-12-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Settime: bug fix for time independent variables in combination with other operators (pipes)
	
2010-11-22  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* mulcoslat: added support for GME grids [request: Jaison-Thomas Ambadan]
	